--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
 <div class="container">
     <div class="logo">
         <!-- Replace with your actual logo file path -->
-        <img src="chosen-offset-logo.jpg" alt="Chosen Offset">
+        <img src="chosen-offset-logo.png" alt="Chosen Offset">
     </div>
 
     <h1>Chosen Offset</h1>
